rnsc/test_data/rns_integration/error/parser/class_header/access_flags/all_invalid.rns
.class private static protected synchronized bridge varargs native strict HelloWorld
.super java/lang/Object
.class_end
